--- a/Day 4/assets/css/style.css
+++ b/Day 4/assets/css/style.css
@@ -1,14 +1,8 @@
-@media only screen and (max-width: 600px) {
-  .test {
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-    align-items: center;
-  }
-}
-
 .nav-item :hover {
   color: #37bd32;
+}
+.nav-item {
+  font-size: 0.75rem;
 }
 
 .nav-link,
@@ -49,6 +43,10 @@
   background-color: blue;
   color: white;
 }
+.carousel {
+  padding: 0 15vw;
+}
+
 .carousel-indicators li {
   background-color: darkslategrey;
   height: 1rem;
@@ -65,6 +63,18 @@
   background-color: #37bd32;
   border-radius: 100%;
 }
+.carousel-caption {
+  /* position: relative; */
+
+  left: 65%;
+  top: 2vw;
+  /* font-size: 2.5rem; */
+  color: black;
+  text-align: left;
+}
+.caption {
+  color: #37bd32;
+}
 .card > div > i {
   font-size: 3.5rem;
   padding: 1rem;
@@ -72,7 +82,7 @@
 .card {
   color: #fff;
   height: 150px;
-  width: 250px;
+  width: 255px;
   display: flex;
   align-content: center;
   align-items: center;
