--- a/5_JS_Jquery/Registration_Page/assets/css/style.css
+++ b/5_JS_Jquery/Registration_Page/assets/css/style.css
@@ -1,6 +1,11 @@
 body {
   background-image: url(../images/background-1409125.svg);
+  background-color: blue;
+}
+body > div {
+  height: 100vh;
 }
 form {
+  width: 50vh;
   background-color: white;
 }
