--- a/5_JS_Jquery/Registration_Page/assets/css/style.css
+++ b/5_JS_Jquery/Registration_Page/assets/css/style.css
@@ -10,8 +10,15 @@ form {
   background-color: white;
 }
 
+.bg-error {
+  background-color: rgba(253, 115, 115, 0.116);
+}
+
 @media only screen and (max-width: 500px) {
   form {
     width: 90vw;
   }
+}
+input[type="radio"] {
+  border: 1px solid red !important;
 }
