--- a/6_Registration_Page/assets/css/style.css
+++ b/6_Registration_Page/assets/css/style.css
@@ -39,3 +39,8 @@ input[type="radio"] {
   height: 12rem;
   /* height: 10rem; */
 }
+
+.required::after , .required-header::before{
+  content: " *";
+  color: red;
+}
