Fixed bug - skills and insterest fields not persisting, added indicator for fields in Assignment - 7

--- a/7_session_Registration_Page/assets/css/style.css
+++ b/7_session_Registration_Page/assets/css/style.css
@@ -39,3 +39,9 @@ input[type="radio"] {
   height: 12rem;
   /* height: 10rem; */
 }
+
+/* for required styling */
+.required::after , .required-header::before{
+  content: " *";
+  color: red;
+}
