done description subtask

--- a/php/TODO/assets/css/style.css
+++ b/php/TODO/assets/css/style.css
@@ -39,3 +39,22 @@ button:focus {
 }
 
 /* multi Select */
+
+.star {
+  position: relative;
+  visibility: hidden;
+  font-size: 30px;
+  cursor: pointer;
+  top: -1rem;
+  border: black;
+}
+.star:before {
+  content: "\2606";
+  position: absolute;
+  visibility: visible;
+}
+.star:checked:before {
+  content: "\2605";
+  color: yellow;
+  position: absolute;
+}
